--- a/src/pages/blog/2018年度JOCW国際ワークショップ開催報告.md
+++ b/src/pages/blog/2018年度JOCW国際ワークショップ開催報告.md
@@ -1,6 +1,6 @@
 ---
 templateKey: blog-post
-title: 2018年度JOCW国際ワークショップ
+title: 2018年度JOCW国際ワークショップ開催報告
 date: 2018-9-13T14:13:10.000Z
 featuredpost: false
 featuredimage: /img/blog/DSC05184.jpg
