--- a/src/pages/blog/2015年度JOCW総会.md
+++ b/src/pages/blog/2015年度JOCW総会.md
@@ -6,7 +6,8 @@ featuredpost: false
 featuredimage: /img/oe-japan-logo-a.png
 description: 2015年度総会を開催します。
 tags:
-  - 2015年度JOCW総会
+  - JOCW
+  - 総会
 ---
 JOCWの2015年度総会を以下の予定で開催しますので、会員各位におかれましては、予定の確保を御願いします。
 
