--- a/src/pages/blog/オープンエデュケーションが拓く教育改革 ー世界の最先端事例から学ぶー.md
+++ b/src/pages/blog/オープンエデュケーションが拓く教育改革 ー世界の最先端事例から学ぶー.md
@@ -7,6 +7,7 @@ featuredimage: /img/oe-japan-logo.png
 description: 本シンポジウムでは、オープンエデュケーションのムーブメントを牽引してきた、オープンエデュケーションコンソーシアム（OEC）のボードメンバーをアメリカとフランスから迎えて、最先端のオープンエデュケーションの取り組みについてご紹介頂き、国内のFDや大学教育改革の現状と比較しながらその示唆を得ることを目的として、議論を深めていく。
 tags:
   - JOCW
+  - オープンエデュケーション
   - 講演会
 ---
 「グローバル化」や「イノベーション」が、大学教育の改革のキーワードとして掲げられる中、オープンエデュケーションの取り組みはそれらの課題に率先して取り組むための手がかりとして注目されている。わが国の大学においても、オープンエデュケーションの環境を整える素地は整い、各大学の課題や目的に応じて、OCW（Open Courseware）やMOOC (Massive Open Online Course)など、多くのコンテンツが提供されるようになってきた。しかしながら、それらのリソースを学生の学習の向上や、大学教育の改革へと、どのように活かすのかを検討することが喫緊の課題である。本シンポジウムでは、オープンエデュケーションのムーブメントを牽引してきた、オープンエデュケーションコンソーシアム（OEC）のボードメンバーをアメリカとフランスから迎えて、最先端のオープンエデュケーションの取り組みについてご紹介頂き、国内のFDや大学教育改革の現状と比較しながらその示唆を得ることを目的として、議論を深めていく。
