--- a/src/pages/blog/特別講演会「オープンコースウェアからオープンエデュケーションへ」.md
+++ b/src/pages/blog/特別講演会「オープンコースウェアからオープンエデュケーションへ」.md
@@ -6,7 +6,7 @@ featuredpost: false
 featuredimage: /img/oe-japan-logo.png
 description: 特別講演会「オープンコースウェアからオープンエデュケーションへ－教育のグローバリゼーションに資する」を、日本オープンコースウェア・コンソーシアム（JOCW）と東京大学大学総合教育研究センターの共催で開催します。
 tags:
-  - JOCW
+  - オープンエデュケーション
   - 講演会
 ---
 2015年度総会に引き続き、特別講演会「オープンコースウェアからオープンエデュケーションへ－教育のグローバリゼーションに資する」を、日本オープンコースウェア・コンソーシアム（JOCW）と[東京大学大学総合教育研究センター](http://www.he.u-tokyo.ac.jp/2015/04/17/2799/)の共催で、以下のとおり開催します。
