--- a/src/pages/blog/過去のトピックス.md
+++ b/src/pages/blog/過去のトピックス.md
@@ -6,7 +6,7 @@ featuredpost: false
 featuredimage: /img/oe-japan-logo.png
 description: 2013年以前のJOCWのトピックをまとめました。
 tags:
-  - Past topics
+  - JOCW
 ---
 * 会則を2013年度の総会で承認された内容ににアップデートしました。
 * [Open Education Week 2015](http://www.openeducationweek.org/)&nbsp;は　3月9日から13日です。
