タイトル修正

--- a/src/pages/blog/参加団体の活動-北海道大学.md
+++ b/src/pages/blog/参加団体の活動-北海道大学.md
@@ -1,6 +1,6 @@
 ---
 templateKey: blog-post
-title: 参加団体の活動（1）北海道大学
+title: 参加団体の活動 北海道大学
 date: 2019-5-28T14:13:10.000Z
 featuredpost: true
 featuredimage: /img/blog/huocw.png
