過去のイベントをアップデート

--- a/src/pages/blog/過去のイベント.md
+++ b/src/pages/blog/過去のイベント.md
@@ -9,15 +9,22 @@ tags:
   - JOCW
 ---
 
-* 2012年12月19日　2012年度大学ICT推進協議会(AXIES)年次大会（神戸国際会議場）　企画セッション(13:40-15:10)にてOpen Education Resource - 世界の動き、日本の取り組み-」のテーマでパネル討論を行いました。セッションの様子は[こちら](http://jocw.jp/AXIES2012.html)からご覧になれます。
-* 2012年8月24日　芝浦工業大学豊洲キャンパスにて日本工学教育協会の平成24年度工学教育研究講演会が開催され、オーガナイズドセッション：オープンコースウェアとその活用において７件の講演とパネルディスカッションを行いました。セッションの様子・配布資料などは[こちら](http://jocw.jp/jsee2012_j.html)からご覧になれます。
+* 2012年12月19日　2012年度大学ICT推進協議会(AXIES)年次大会（神戸国際会議場）　企画セッション(13:40-15:10)にてOpen Education Resource - 世界の動き、日本の取り組み-」のテーマでパネル討論を行いました。
+<!-- セッションの様子は[こちら](http://jocw.jp/AXIES2012.html)からご覧になれます。 -->
+* 2012年8月24日　芝浦工業大学豊洲キャンパスにて日本工学教育協会の平成24年度工学教育研究講演会が開催され、オーガナイズドセッション：オープンコースウェアとその活用において７件の講演とパネルディスカッションを行いました。
+
 * 2011年12月9日　福岡国際会議場で開催された大学ICT推進協議会年次大会企画セッションにおいて「OCW、ソーシャルラーニングプラットフォームへの可能性と課題 」のテーマでパネルディスカッションを行いました。
-* 2011年9月9日　北海道大学で平成23年度工学・工業教育研究講演会（9月8日～10日）が開催され、オーガナイズドセッション（9月9日(金) 9時～10時30分,13時～14時30分）において、「オープンコースウェアとその応用」のテーマでJOCWとしての取り組み、および主要なOCW公開 大学の取り組みを紹介しました。セッションの様子・配布資料などは[こちら](http://jocw.jp/jsee2011_j.html)からご覧になれます。
-* 2010年12月10日　京都（京都府民交流プラザ　京都テルサ）で平成22年度情報教育研究集会が開催され、企画セッション（12月10日10時00分～12時30分）にて「オープンコースウェアのインパクトと将来展望」のテーマでJOCW、主要大学の取り組み、展望と課題などについての講演およびパネルディスカッションが行われました。当日の様子／資料などは[こちら](http://jocw.jp/InfoEd2010_j.html)からご覧になれます。
-* 2010年8月20日　東北大学で平成22年度工学・工業教育研究講演会（8月20日～22日）が開催され、オーガナイズドセッション（8月20日(金) 9時00分～12時00分）において、「オープンコースウェアとその応用」のテーマでJOCWとしての取り組み、および主要なOCW公開大学の取り組みを紹介しました。セッションの様子・配布資料などは[こちら](http://jocw.jp/jsee2010_j.html)からご覧になれます。
-* 2010年6月23日　京都大学にてOpenCourseWareシンポジウム「オープンエデュケーション」が開催されました。当日の様子は[京都大学からビデオ配信](http://ocw.kyoto-u.ac.jp/news/ocw-conference/20100623/video-1)されています。
-* 2009年８月8日　名古屋大学で平成21年度工学・工業教育研究講演会（8月7日～9日）が開催され、オーガナイズドセッション（8月8日(土) 9時00分～14時45分）において、「オープンコンテンツとその応用」のテーマでJOCWとしての取り組み、および主要なOCW公開大学の取り組みを紹介しました。セミナーの様子・配布資料などは[こちら](http://jocw.jp/jsee_j.html)からご覧になれます。
-* 2008年12月12日　北九州市小倉（西日本総合展示場）で平成20年度情報教育研究集会（12月12日～13日）が開催され、特別セッション（12月12日(金) 13時30分～15時30分）にて「オープンコンテンツの世界的潮流」のテーマでJOCWとしての取り組み、および主要なOCW公開大学の取り組みを紹介しました。セミナーの様子・配布資料などは[こちら](http://jocw.jp/InfoEd_j.html)からご覧になれます。
+* 2011年9月9日　北海道大学で平成23年度工学・工業教育研究講演会（9月8日～10日）が開催され、オーガナイズドセッション（9月9日(金) 9時～10時30分,13時～14時30分）において、「オープンコースウェアとその応用」のテーマでJOCWとしての取り組み、および主要なOCW公開 大学の取り組みを紹介しました。
+* 2010年12月10日　京都（京都府民交流プラザ　京都テルサ）で平成22年度情報教育研究集会が開催され、企画セッション（12月10日10時00分～12時30分）にて「オープンコースウェアのインパクトと将来展望」のテーマでJOCW、主要大学の取り組み、展望と課題などについての講演およびパネルディスカッションが行われました。
+当日の様子／資料などは[こちら](blog/Infoed2010-オープンコースウェアのインパクトと将来展望/)からご覧になれます。
+* 2010年8月20日　東北大学で平成22年度工学・工業教育研究講演会（8月20日～22日）が開催され、オーガナイズドセッション（8月20日(金) 9時00分～12時00分）において、「オープンコースウェアとその応用」のテーマでJOCWとしての取り組み、および主要なOCW公開大学の取り組みを紹介しました。
+配布資料は[こちら](/blog/JSEE2010-オープンコースウェアとその応用/)からご覧になれます。
+* 2010年6月23日　京都大学にてOpenCourseWareシンポジウム「オープンエデュケーション」が開催されました。
+当日の様子は[京都大学からビデオ配信](http://www.kyoto-u.ac.jp/static/ja/news_data/h/h1/news7/2010/100623_3.htm)されています。
+* 2009年８月8日　名古屋大学で平成21年度工学・工業教育研究講演会（8月7日～9日）が開催され、オーガナイズドセッション（8月8日(土) 9時00分～14時45分）において、「オープンコンテンツとその応用」のテーマでJOCWとしての取り組み、および主要なOCW公開大学の取り組みを紹介しました。
+配布資料は[こちら](/blog/JSEE2009-オープンコースウェアとその応用/)からご覧になれます。
+* 2008年12月12日　北九州市小倉（西日本総合展示場）で平成20年度情報教育研究集会（12月12日～13日）が開催され、特別セッション（12月12日(金) 13時30分～15時30分）にて「オープンコンテンツの世界的潮流」のテーマでJOCWとしての取り組み、および主要なOCW公開大学の取り組みを紹介しました。
+配布資料は[こちら](/blog/Infoed2008-オープンコンテンツの世界的潮流/)からご覧になれます。
 * 2008年8月4日　Apple store Ginzaにて、日本オープンコースウェアコンソーシアム（JOCW）とキャスタリア株式会社の共同開催によるイベント「Opencourse Ware on iPod/iPhone--『もう学ばないとは言わせない！』」を開催しました。
 * 2007年4月16日　「高等教育オープンコンテンツに関する知財セミナー」が慶應義塾大学で開催されました。セミナーの様子・配布資料などは[こちら](http://jocw.jp/IPseminar_j.html)からご覧になれます。
 * 2006年12月14日、15日の両日京都大学で「OCWコンテンツマネージメントシステム:eduCommons  
