--- a/src/pages/blog/2016年度JOCW総会.md
+++ b/src/pages/blog/2016年度JOCW総会.md
@@ -3,7 +3,7 @@ templateKey: blog-post
 title: 2016年度JOCW総会
 date: 2016-5-10T14:13:10.000Z
 featuredpost: false
-featuredimage: /img/oe-japan-logo-a.png
+featuredimage: /img/oe-japan-logo.png
 description: 2016年度総会を開催します。
 tags:
   - JOCW
