過去のイベントを修正

--- a/src/pages/blog/過去のイベント.md
+++ b/src/pages/blog/過去のイベント.md
@@ -26,7 +26,8 @@ tags:
 * 2008年12月12日　北九州市小倉（西日本総合展示場）で平成20年度情報教育研究集会（12月12日～13日）が開催され、特別セッション（12月12日(金) 13時30分～15時30分）にて「オープンコンテンツの世界的潮流」のテーマでJOCWとしての取り組み、および主要なOCW公開大学の取り組みを紹介しました。
 配布資料は[こちら](/blog/Infoed2008-オープンコンテンツの世界的潮流/)からご覧になれます。
 * 2008年8月4日　Apple store Ginzaにて、日本オープンコースウェアコンソーシアム（JOCW）とキャスタリア株式会社の共同開催によるイベント「Opencourse Ware on iPod/iPhone--『もう学ばないとは言わせない！』」を開催しました。
-* 2007年4月16日　「高等教育オープンコンテンツに関する知財セミナー」が慶應義塾大学で開催されました。セミナーの様子・配布資料などは[こちら](http://jocw.jp/IPseminar_j.html)からご覧になれます。
+* 2007年4月16日　「高等教育オープンコンテンツに関する知財セミナー」が慶應義塾大学で開催されました。
+<!-- セミナーの様子・配布資料などは[こちら](http://jocw.jp/IPseminar_j.html)からご覧になれます。 -->
 * 2006年12月14日、15日の両日京都大学で「OCWコンテンツマネージメントシステム:eduCommons  
 Ploneプログラミング入門セミナー」が開催されました。　[詳細はこちら](http://ocw.kyoto-u.ac.jp/jp/news/seminar_1214/seminar_1214.html)にあります。
 * 2006年4月20日　「オープンコースウェア国際会議2006」が京都大学で開催されました。国際会議の様子は[こちら](http://ocw.kyoto-u.ac.jp/jp/gocw/conference/video.htm)からご覧になれます。
