タグの修正

--- a/src/pages/blog/JSEE2009-オープンコースウェアとその応用.md
+++ b/src/pages/blog/JSEE2009-オープンコースウェアとその応用.md
@@ -7,7 +7,7 @@ featuredimage: /img/oe-japan-logo-a.png
 description: 2009年8月8日　名古屋大学で平成21年度工学・工業教育研究講演会（8月7日～9日）が開催され、オーガナイズドセッション（8月8日(土) 9時00分～14時45分）において、「オープンコンテンツとその応用」のテーマでJOCWとしての取り組み、および主要なOCW公開大学の取り組みを紹介しました。
 tags:
   - JOCW
-  - 講演
+  - 講演会
 ---
 
 ### 平成21年度工学・工業教育研究講演会
