--- a/src/pages/blog/JSEE2010-オープンコースウェアとその応用.md
+++ b/src/pages/blog/JSEE2010-オープンコースウェアとその応用.md
@@ -7,7 +7,7 @@ featuredimage: /img/oe-japan-logo-a.png
 description: 北海道大学で平成23年度工学・工業教育研究講演会（9月8日～10日）が開催され、オーガナイズドセッション（9月9日(金) 9時～10時30分,13時～14時30分）において、「オープンコースウェアとその応用」のテーマでJOCWとしての取り組み、および主要なOCW公開 大学の取り組みを紹介しました。
 tags:
   - JOCW
-  - 講演
+  - 講演会
 ---
 
 ### 平成23年度工学・工業教育研究講演会
